FakeJS/src/FakeJSParser.java
// Generated from FakeJS.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FakeJSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MUL=1, DIV=2, ADD=3, SUB=4, EQL_EQL=5, NOT_EQL=6, AND_AND=7, OR_OR=8, 
		EQL=9, SEMICOLON=10, COMMA=11, L_BRACKET=12, R_BRACKET=13, L_CURV_BRACKET=14, 
		R_CURV_BRACKET=15, DOT=16, VAR=17, FUNCTION=18, RETURN=19, NEW=20, IF=21, 
		ELSE=22, WHILE=23, FOR=24, THIS=25, WS=26, TRUE=27, FALSE=28, INTEGER=29, 
		STRING=30, ID=31;
	public static final int
		RULE_start = 0, RULE_code_block = 1, RULE_code_content = 2, RULE_code_statement = 3, 
		RULE_declaration = 4, RULE_declarationP = 5, RULE_assignment = 6, RULE_assignmentP = 7, 
		RULE_declaration_assignment = 8, RULE_declaration_assignmentP = 9, RULE_boolean_assignment = 10, 
		RULE_boolean_assignmentP = 11, RULE_boolean_declaration_assignment = 12, 
		RULE_boolean_declaration_assignmentP = 13, RULE_new_assignment = 14, RULE_new_declaration_assignment = 15, 
		RULE_object_assignment = 16, RULE_object_property_assignment = 17, RULE_code_blockP = 18, 
		RULE_arithmetic_expression = 19, RULE_estimation_block = 20, RULE_sub_code_block = 21, 
		RULE_if_block = 22, RULE_sub_if_block = 23, RULE_loop_block = 24, RULE_for_loop_prestatement = 25, 
		RULE_for_loop_wrap = 26, RULE_function_definition = 27, RULE_function_definition_argument = 28, 
		RULE_function_definition_argumentP = 29, RULE_function_execution = 30, 
		RULE_constructor_execution = 31, RULE_function_execution_argument = 32, 
		RULE_function_execution_argumentP = 33, RULE_object_property = 34, RULE_object_propertyP = 35, 
		RULE_comparison_expression = 36, RULE_t1_math_operator = 37, RULE_t2_math_operator = 38, 
		RULE_t2_comp_operator = 39, RULE_t6_comp_operator = 40, RULE_t7_comp_operator = 41, 
		RULE_sl_boolean = 42, RULE_integer = 43, RULE_string = 44, RULE_id = 45, 
		RULE_sl_true = 46, RULE_sl_false = 47, RULE_multiplication = 48, RULE_division = 49, 
		RULE_addition = 50, RULE_subtraction = 51, RULE_equal_equal = 52, RULE_not_equal = 53, 
		RULE_and_and = 54, RULE_or_or = 55, RULE_equal = 56, RULE_semicolon = 57, 
		RULE_comma = 58, RULE_var = 59, RULE_function = 60, RULE_sl_return = 61, 
		RULE_sl_new = 62, RULE_sl_if = 63, RULE_sl_else = 64, RULE_sl_while = 65, 
		RULE_sl_for = 66, RULE_sl_this = 67, RULE_l_bracket = 68, RULE_r_bracket = 69, 
		RULE_l_curv_bracket = 70, RULE_r_curv_bracket = 71, RULE_dot = 72;
	public static final String[] ruleNames = {
		"start", "code_block", "code_content", "code_statement", "declaration", 
		"declarationP", "assignment", "assignmentP", "declaration_assignment", 
		"declaration_assignmentP", "boolean_assignment", "boolean_assignmentP", 
		"boolean_declaration_assignment", "boolean_declaration_assignmentP", "new_assignment", 
		"new_declaration_assignment", "object_assignment", "object_property_assignment", 
		"code_blockP", "arithmetic_expression", "estimation_block", "sub_code_block", 
		"if_block", "sub_if_block", "loop_block", "for_loop_prestatement", "for_loop_wrap", 
		"function_definition", "function_definition_argument", "function_definition_argumentP", 
		"function_execution", "constructor_execution", "function_execution_argument", 
		"function_execution_argumentP", "object_property", "object_propertyP", 
		"comparison_expression", "t1_math_operator", "t2_math_operator", "t2_comp_operator", 
		"t6_comp_operator", "t7_comp_operator", "sl_boolean", "integer", "string", 
		"id", "sl_true", "sl_false", "multiplication", "division", "addition", 
		"subtraction", "equal_equal", "not_equal", "and_and", "or_or", "equal", 
		"semicolon", "comma", "var", "function", "sl_return", "sl_new", "sl_if", 
		"sl_else", "sl_while", "sl_for", "sl_this", "l_bracket", "r_bracket", 
		"l_curv_bracket", "r_curv_bracket", "dot"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'&&'", "'||'", "'='", 
		"';'", "','", "'('", "')'", "'{'", "'}'", "'.'", "'var'", "'function'", 
		"'return'", "'new'", "'if'", "'else'", "'while'", "'for'", "'this'", null, 
		"'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MUL", "DIV", "ADD", "SUB", "EQL_EQL", "NOT_EQL", "AND_AND", "OR_OR", 
		"EQL", "SEMICOLON", "COMMA", "L_BRACKET", "R_BRACKET", "L_CURV_BRACKET", 
		"R_CURV_BRACKET", "DOT", "VAR", "FUNCTION", "RETURN", "NEW", "IF", "ELSE", 
		"WHILE", "FOR", "THIS", "WS", "TRUE", "FALSE", "INTEGER", "STRING", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FakeJS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FakeJSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			code_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_blockContext extends ParserRuleContext {
		public Code_contentContext code_content() {
			return getRuleContext(Code_contentContext.class,0);
		}
		public Code_blockPContext code_blockP() {
			return getRuleContext(Code_blockPContext.class,0);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCode_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			code_content();
			setState(149);
			code_blockP();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_contentContext extends ParserRuleContext {
		public Code_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_content; }
	 
		public Code_contentContext() { }
		public void copyFrom(Code_contentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Cod_cont_loop_SUBContext extends Code_contentContext {
		public Loop_blockContext loop_block() {
			return getRuleContext(Loop_blockContext.class,0);
		}
		public Cod_cont_loop_SUBContext(Code_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_cont_loop_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_cont_func_SUBContext extends Code_contentContext {
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Cod_cont_func_SUBContext(Code_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_cont_func_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_cont_if_SUBContext extends Code_contentContext {
		public If_blockContext if_block() {
			return getRuleContext(If_blockContext.class,0);
		}
		public Cod_cont_if_SUBContext(Code_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_cont_if_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_cont_stat_SUBContext extends Code_contentContext {
		public Code_statementContext code_statement() {
			return getRuleContext(Code_statementContext.class,0);
		}
		public SemicolonContext semicolon() {
			return getRuleContext(SemicolonContext.class,0);
		}
		public Cod_cont_stat_SUBContext(Code_contentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_cont_stat_SUB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_contentContext code_content() throws RecognitionException {
		Code_contentContext _localctx = new Code_contentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_code_content);
		try {
			setState(157);
			switch (_input.LA(1)) {
			case VAR:
			case RETURN:
			case THIS:
			case ID:
				_localctx = new Cod_cont_stat_SUBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				code_statement();
				setState(152);
				semicolon();
				}
				break;
			case IF:
				_localctx = new Cod_cont_if_SUBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				if_block();
				}
				break;
			case WHILE:
			case FOR:
				_localctx = new Cod_cont_loop_SUBContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				loop_block();
				}
				break;
			case FUNCTION:
				_localctx = new Cod_cont_func_SUBContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				function_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_statementContext extends ParserRuleContext {
		public Code_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_statement; }
	 
		public Code_statementContext() { }
		public void copyFrom(Code_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Cod_stat_bool_dclr_asn_SUBContext extends Code_statementContext {
		public Boolean_declaration_assignmentContext boolean_declaration_assignment() {
			return getRuleContext(Boolean_declaration_assignmentContext.class,0);
		}
		public Cod_stat_bool_dclr_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_bool_dclr_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_dclr_SUBContext extends Code_statementContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Cod_stat_dclr_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_dclr_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_obj_asn_SUBContext extends Code_statementContext {
		public Object_assignmentContext object_assignment() {
			return getRuleContext(Object_assignmentContext.class,0);
		}
		public Cod_stat_obj_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_obj_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_new_dclr_asn_SUBContext extends Code_statementContext {
		public New_declaration_assignmentContext new_declaration_assignment() {
			return getRuleContext(New_declaration_assignmentContext.class,0);
		}
		public Cod_stat_new_dclr_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_new_dclr_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_func_exe_SUBContext extends Code_statementContext {
		public Function_executionContext function_execution() {
			return getRuleContext(Function_executionContext.class,0);
		}
		public Cod_stat_func_exe_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_func_exe_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_dclr_asn_SUBContext extends Code_statementContext {
		public Declaration_assignmentContext declaration_assignment() {
			return getRuleContext(Declaration_assignmentContext.class,0);
		}
		public Cod_stat_dclr_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_dclr_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_ret_a_e_SUBContext extends Code_statementContext {
		public Sl_returnContext sl_return() {
			return getRuleContext(Sl_returnContext.class,0);
		}
		public Arithmetic_expressionContext arithmetic_expression() {
			return getRuleContext(Arithmetic_expressionContext.class,0);
		}
		public Cod_stat_ret_a_e_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_ret_a_e_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_bool_asn_SUBContext extends Code_statementContext {
		public Boolean_assignmentContext boolean_assignment() {
			return getRuleContext(Boolean_assignmentContext.class,0);
		}
		public Cod_stat_bool_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_bool_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_asn_SUBContext extends Code_statementContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Cod_stat_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_ret_c_e_SUBContext extends Code_statementContext {
		public Sl_returnContext sl_return() {
			return getRuleContext(Sl_returnContext.class,0);
		}
		public Comparison_expressionContext comparison_expression() {
			return getRuleContext(Comparison_expressionContext.class,0);
		}
		public Cod_stat_ret_c_e_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_ret_c_e_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Cod_stat_new_asn_SUBContext extends Code_statementContext {
		public New_assignmentContext new_assignment() {
			return getRuleContext(New_assignmentContext.class,0);
		}
		public Cod_stat_new_asn_SUBContext(Code_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitCod_stat_new_asn_SUB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_statementContext code_statement() throws RecognitionException {
		Code_statementContext _localctx = new Code_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_code_statement);
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Cod_stat_dclr_SUBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				declaration();
				}
				break;
			case 2:
				_localctx = new Cod_stat_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				assignment();
				}
				break;
			case 3:
				_localctx = new Cod_stat_dclr_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(161);
				declaration_assignment();
				}
				break;
			case 4:
				_localctx = new Cod_stat_bool_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(162);
				boolean_assignment();
				}
				break;
			case 5:
				_localctx = new Cod_stat_bool_dclr_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(163);
				boolean_declaration_assignment();
				}
				break;
			case 6:
				_localctx = new Cod_stat_func_exe_SUBContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(164);
				function_execution();
				}
				break;
			case 7:
				_localctx = new Cod_stat_ret_a_e_SUBContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(165);
				sl_return();
				setState(166);
				arithmetic_expression(0);
				}
				break;
			case 8:
				_localctx = new Cod_stat_ret_c_e_SUBContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(168);
				sl_return();
				setState(169);
				comparison_expression(0);
				}
				break;
			case 9:
				_localctx = new Cod_stat_new_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(171);
				new_assignment();
				}
				break;
			case 10:
				_localctx = new Cod_stat_new_dclr_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(172);
				new_declaration_assignment();
				}
				break;
			case 11:
				_localctx = new Cod_stat_obj_asn_SUBContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(173);
				object_assignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Dclr_m_SUBContext extends DeclarationContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public DeclarationPContext declarationP() {
			return getRuleContext(DeclarationPContext.class,0);
		}
		public Dclr_m_SUBContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitDclr_m_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Dclr_s_SUBContext extends DeclarationContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Dclr_s_SUBContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitDclr_s_SUB(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Dclr_m_SUBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				var();
				setState(177);
				id();
				setState(178);
				declarationP();
				}
				break;
			case 2:
				_localctx = new Dclr_s_SUBContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				var();
				setState(181);
				id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationPContext extends ParserRuleContext {
		public DeclarationPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationP; }
	 
		public DeclarationPContext() { }
		public void copyFrom(DeclarationPContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DclrP_SUBContext extends DeclarationPContext {
		public CommaContext comma() {
			return getRuleContext(CommaContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public DeclarationPContext declarationP() {
			return getRuleContext(DeclarationPContext.class,0);
		}
		public DclrP_SUBContext(DeclarationPContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitDclrP_SUB(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclrP_ENDContext extends DeclarationPContext {
		public DclrP_ENDContext(DeclarationPContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FakeJSVisitor ) return ((FakeJSVisitor<? extends T>)visitor).visitDclrP_END(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationPContext declarationP() throws RecognitionException {
		DeclarationPContext _localctx = new DeclarationPContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarationP);
		try {
			setState(190);
			switch (_input.LA(1)) {
			case COMMA:
